--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %} {% block title%} index {% endblock %} {% block
 content%}
-<div class="card mb-3 bg-black">
+<div class="bg-black">
+<div class="card mb-3 bg-black container">
   <div class="row g-0">
     <div class="col-md-8">
       <div class="card-body">
@@ -44,32 +45,10 @@ content%}
       </div>
     </div>
     <div class="col-md-4">
-      <ul class="list-unstyled text-warning float-end">
-        <li>
-          <i class="fa-solid fa-xmark"></i>&nbsp;<i
-            class="fa-solid fa-xmark"
-          ></i
-          >&nbsp;<i class="fa-solid fa-xmark"></i>
-        </li>
-      </ul>
-      <div
-        class="image-container position-relative"
-        style="width: 400px; height: 300px; border: 1px solid #ccc"
-      >
-        <img
-          src="static/car1.jpg"
-          alt="Image 1"
-          class="overlap-image image1 position-absolute"
-          style="height: 100px; top: 0; left: 0; z-index: 1"
-        />
-        <img
-          src="static/car2.jpg"
-          alt="Image 2"
-          class="overlap-image image2"
-          style="height: 100px; top: 50; left: 100px; z-index: 2"
-        />
-      </div>
+      <img src="static/car1.jpg" class="img-fluid rounded-start" alt="Car 1"> 
     </div>
   </div>
 </div>
+</div>
+
 {% endblock %}
