--- a/templates/products.html
+++ b/templates/products.html
@@ -1,96 +1,107 @@
 {% extends "base.html" %} {% block title%} products {% endblock %} {% block
 content%}
-<h1 class="text-center mt-5">Products Page</h1>
 
-<div class="container">
-  <!-- modal start -->
-  <div>
-    <!-- Button trigger modal -->
-    <button
-      type="button"
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#exampleModal"
-    >
-      Add Product
-    </button>
+<div class="container mt-5">
+  <div class="card">
+    <div class="card-header">This is the products page</div>
+    <div class="card-body">
+      <h5 class="card-title text-center mt-5">Products Page</h5>
+      <p class="card-text"></p>
+      <div class="container">
+        <!-- modal start -->
+        <div>
+          <!-- Button trigger modal -->
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+          >
+            Add Product
+          </button>
 
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Add product section</h1>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <!-- form start -->
-            <form>
-              <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label"
-                  >Product Name</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
-                  name="product_name"
-                />
+          <!-- Modal -->
+          <div
+            class="modal fade"
+            id="exampleModal"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">
+                    Add product section
+                  </h1>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <!-- form start -->
+                  <form>
+                    <div class="mb-3">
+                      <label for="exampleInputEmail1" class="form-label"
+                        >Product Name</label
+                      >
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="exampleInputEmail1"
+                        aria-describedby="emailHelp"
+                        name="product_name"
+                      />
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label"
+                        >Buying Price</label
+                      >
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="exampleInputPassword1"
+                        name="buying"
+                      />
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label"
+                        >Selling Price</label
+                      >
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="exampleInputPassword1"
+                        name="selling"
+                      />
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                        <button type="submit" class="btn btn-primary">
+                          Add Product
+                        </button>
+                      </div>
+                    </div>
+                  </form>
+                  <!-- form end -->
+                </div>
               </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
-                  >Buying Price</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="exampleInputPassword1"
-                  name="buying"
-                />
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
-                  >Selling Price</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="exampleInputPassword1"
-                  name="selling"
-                />
-                <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-secondary"
-                  data-bs-dismiss="modal"
-                >
-                  Close
-                </button>
-                <button type="submit" class="btn btn-primary">
-                  Add Product
-                </button>
-              </div>
-              </div>
-            </form>
-            <!-- form end -->
+            </div>
           </div>
         </div>
+        <!-- modal end  -->
       </div>
     </div>
   </div>
-  <!-- modal end  -->
+
   <table id="example" class="table table-striped">
     <thead>
       <tr>
