--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %} {% block title%} login page {% endblock %} {% block
 content%}
-
+<div class="text-center">
+  <h1>Welcome</h1>
+  <p>Log in to your account to check your previous<br> orders, add or edit your address!</p>
+</div>
 <div class="container mt-5">
   <form action="/login" method="POST">
     <div class="mb-3">
@@ -11,14 +14,15 @@ content%}
         name="email"
         id="exampleInputEmail1"
         aria-describedby="emailHelp"
+        placeholder="Enter your email"
       />
     </div>
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" name="password" class="form-control" id="exampleInputPassword1" />
+      <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Login</button>
   </form>
 </div>
 
