--- a/templates/products.html
+++ b/templates/products.html
@@ -124,4 +124,274 @@ content%}
   </table>
 </div>
 
+<!-- product 1 -->
+<div class="container mt-5">
+  <div class="card border-0">
+    <div class="card-header">
+      <h5>Top Selling Items<span class="float-end text-decoration-underline">See All ></span></h5>
+    </div>
+    <div class="card-body">
+      <!-- start -->
+      <div class="card-group">
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+      </div>
+      <!-- end -->
+    </div>
+  </div>
+</div>
+
+<!-- product 2 -->
+<div class="container mt-5">
+  <div class="card border-0">
+    <div class="card-header text-center bg-danger">
+      <h5>Sponsored Products<span class="float-end text-decoration-underline">See All ></span></h5>
+    </div>
+    <div class="card-body">
+      <!-- start -->
+      <div class="card-group">
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+      </div>
+      <!-- end -->
+    </div>
+  </div>
+</div>
+
 {% endblock %}
