--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %} {% block title%} login page {% endblock %} {% block
 content%}
+<div class="text-center">
+  <h1>Welcome</h1>
+  <p>Log in to your account to check your previous<br> orders, add or edit your address!</p>
+</div>
 <div class="container">
   <form action="/register" method="POST">
     <div class="mb-3">
@@ -10,6 +14,7 @@ content%}
         class="form-control"
         id="exampleInputEmail1"
         aria-describedby="emailHelp"
+        placeholder="Enter your full name"
       />
     </div>
     <div class="mb-3">
@@ -20,6 +25,7 @@ content%}
         class="form-control"
         id="exampleInputEmail1"
         aria-describedby="emailHelp"
+        placeholder="Enter your email"
       />
     </div>
     <div class="mb-3">
@@ -30,6 +36,7 @@ content%}
         class="form-control"
         id="exampleInputEmail1"
         aria-describedby="emailHelp"
+        placeholder="Phone number"
       />
     </div>
     <div class="mb-3">
@@ -39,10 +46,11 @@ content%}
         name="password"
         class="form-control"
         id="exampleInputPassword1"
+        placeholder="Password"
       />
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Create Account</button>
   </form>
 </div>
 {% endblock %}
